# premier-league-platform

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: _sources.yml
dbt/models/staging/: _models.yml  stg_competitions.sql  stg_matches.sql  stg_scorers.sql  stg_teams.sql
src/pl_platform/: __init__.py  api_client.py  pipeline.py  rate_limiter.py
tests/: test_pipeline.py  test_rate_limiter.py
