[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pl-platform"
version = "0.1.0"
description = "Premier League data platform: REST API → DuckDB → dbt → Dagster → Next.js dashboard"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Swaraj Chauhan", email = "chauhanswaraj10@gmail.com" }
]
dependencies = [
    "dlt[duckdb]>=1.0.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.urls]
Repository = "https://github.com/Swaraj1703/premier-league-platform"

[tool.hatch.build.targets.wheel]
packages = ["src/pl_platform"]